[package]
name = "simple"
version = "0.1.107"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
llama-cpp-2 = { path = "../../llama-cpp-2", version = "0.1.69" }
hf-hub = { version = "0.3.2" }
clap = "4.5.36"
anyhow = "1.0.97"
encoding_rs = "0.8.35"
tracing-subscriber = { version = "0.3", features = ["json"] }

[features]
cuda = ["llama-cpp-2/cuda"]
metal = ["llama-cpp-2/metal"]
native = ["llama-cpp-2/native"]
vulkan = ["llama-cpp-2/vulkan"]

[lints]
workspace = true
